--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 asgiref==3.5.0
 asttokens==2.0.5
+autopep8==1.6.0
 backcall==0.2.0
 backports.zoneinfo==0.2.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
 decorator==5.1.1
 Django==4.0.4
+django-silk==4.3.0
 executing==0.8.3
+gprof2dot==2021.2.21
+idna==3.3
 ipython==8.2.0
 jedi==0.18.1
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 matplotlib-inline==0.1.3
 parso==0.8.3
 pexpect==4.8.0
@@ -17,9 +25,15 @@ psycopg==3.0.11
 psycopg2-binary==2.9.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycodestyle==2.8.0
 Pygments==2.12.0
+python-dateutil==2.8.2
+pytz==2022.1
+requests==2.27.1
 six==1.16.0
 sqlparse==0.4.2
 stack-data==0.2.0
+toml==0.10.2
 traitlets==5.1.1
+urllib3==1.26.9
 wcwidth==0.2.5
