--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.12
 decorator==5.1.1
 Django==4.0.4
+django-environ==0.8.1
 django-silk==4.3.0
 executing==0.8.3
 gprof2dot==2021.2.21
